@@ -3,11 +3,15 @@ package com.jokim.sivillage.api.product.presentation;
 import com.jokim.sivillage.api.product.application.ProductService;
 import com.jokim.sivillage.api.product.domain.Product;
 import com.jokim.sivillage.api.product.dto.in.ProductRequestDto;
+import com.jokim.sivillage.api.product.dto.in.UpdateProductRequestDto;
 import com.jokim.sivillage.api.product.dto.out.ProductResponseDto;
 import com.jokim.sivillage.api.product.vo.in.ProductRequestVo;
+import com.jokim.sivillage.api.product.vo.in.UpdateProductRequestVo;
 import com.jokim.sivillage.api.product.vo.out.ProductResponseVo;
 import com.jokim.sivillage.common.entity.CommonResponseEntity;
 import java.util.Collections;
+import java.util.stream.Collector;
+import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.modelmapper.ModelMapper;
@@ -32,7 +36,6 @@ public class ProductController {
         ProductResponseDto productResponseDto = productService.getProductByProductCode(productCode);
         log.info("productResponseDto : {}", productResponseDto.toString());
         return ResponseEntity.ok(productResponseDto.toResponseVo());
-        // TODO hashtag sql 문 작성
     }
 
     // 상품 데이터 입력
@@ -57,24 +60,53 @@ public class ProductController {
         );
     }
 
+    // 상품 업데이트 하기
+    @PutMapping("/products")
+    public CommonResponseEntity<Void> updateProduct(
+        @RequestBody UpdateProductRequestVo updateProductRequestVo) {
+        log.info("productRequestVo : {}", updateProductRequestVo.toString());
+
+        UpdateProductRequestDto productRequestDto = UpdateProductRequestDto.builder()
+            .productCode(updateProductRequestVo.getProductCode())
+            .productName(updateProductRequestVo.getProductName())
+            .brandName(updateProductRequestVo.getBrandName())
+            .isOnSale(true)
+            .detail(updateProductRequestVo.getDetail())
+            .standardPrice(updateProductRequestVo.getStandardPrice())
+            .build();
+
+        productService.updateProduct(productRequestDto.getProductCode(), productRequestDto);
+
+        return new CommonResponseEntity<>(
+            HttpStatus.OK,
+            "상품 변경 성공",
+            null
+        );
+    }
+
+
     // 옵션 별  필터링 된 상품 보기
-//    @GetMapping("products/options")
-//    public ResponseEntity<List<ProductResponseVo>> getFilteredProduct(
-//        @RequestParam(value = "size-id") Long sizeId,
-//        @RequestParam(value = "color-id") Long colorId,
-//        @RequestParam(value = "etc-id") Long etcId) {
-//        log.info("productSize : {}", sizeId);
-//        log.info("productColor : {}", colorId);
-//        log.info("productEtc : {}", etcId);
-//        List<ProductResponseDto> productResponseDto = productService.getFilteredProducts(sizeId,
-//            colorId, etcId);
-//
-//        ModelMapper modelMapper = new ModelMapper();
+    @GetMapping("products/options")
+    public ResponseEntity<List<ProductResponseVo>> getFilteredProduct(
+        @RequestParam(value = "size-id") Long sizeId,
+        @RequestParam(value = "color-id") Long colorId,
+        @RequestParam(value = "etc-id") Long etcId) {
+        log.info("productSize : {}", sizeId);
+        log.info("productColor : {}", colorId);
+        log.info("productEtc : {}", etcId);
+        List<ProductResponseDto> productResponseDto = productService.getFilteredProducts(sizeId,
+            colorId, etcId);
+
+        log.info("productResponseDto : {}", productResponseDto.toString());
+        ModelMapper modelMapper = new ModelMapper();
 //        List<ProductResponseVo> productResponseVo = productResponseDto.stream()
-//            .map(ResponseDto -> modelMapper.map(ResponseDto, ProductResponseVo.class)).toList();
-//
-//        return ResponseEntity.ok(productResponseVo);
-//    }
+//            .map(ResponseDto -> modelMapper.map(ResponseDto, ProductResponseVo.class)).collect(
+//                Collectors.toList());
+        List<ProductResponseVo> productResponseVo = productResponseDto.stream()
+            .map(ProductResponseDto::toResponseVo).toList();
+        log.info("productResponseVo : {}", productResponseVo.toString());
+        return ResponseEntity.ok(productResponseVo);
+    }
 
     // 랜덤 상품 리스트 보기
 //    @GetMapping("/main/random-product")
